mytoyk8s/optimized-yaml-car-svc/car-serv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-serv-service
  namespace: car-svc
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: car-svc
  sessionAffinity: None
  type: ClusterIP
