mytoyk8s/optimized-yaml-car-svc/car-serv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-serv-ingress
  namespace: car-svc
spec:
  ingressClassName: nginx
  rules:
    - host: car-serv-onpre.rainscales.xyz
      http:
        paths:
          - backend:
              service:
                name: car-serv-service
                port:
                  number: 80
            path: /
            pathType: Prefix
